--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,8 @@ dependencies:
   file_picker: ^10.2.0
   device_info_plus: ^11.5.0
   change_app_package_name: ^1.5.0
+  hugeicons: ^1.1.2
+  flutter_animate: ^4.5.2
 
 flutter_launcher_icons:
   android: true
