--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,11 @@ dependencies:
   change_app_package_name: ^1.5.0
   hugeicons: ^1.1.2
   flutter_animate: ^4.5.2
+  unicons: ^3.0.0
+  flutter_neumorphic: ^3.2.0
+  confetti: ^0.8.0
+  iconsax: ^0.0.8
+  lottie: ^3.3.2
 
 flutter_launcher_icons:
   android: true
@@ -105,8 +110,12 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/icons/
     - assets/screenshots/
     - assets/fonts/Roboto-Regular.ttf
+    - assets/icons/Gpay.png
+    - assets/icons/Paytm.png
+    - assets/icons/Phonepe.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
