--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,46 +1,58 @@
 plugins {
-    id("com.android.application")
-    // id("com.google.gms.google-services")
-    id("kotlin-android")
-    id("dev.flutter.flutter-gradle-plugin")
+    id 'com.android.application'
+    // id 'com.google.gms.google-services'
+    id 'kotlin-android'
+    id 'dev.flutter.flutter-gradle-plugin'
 }
 
+/* -----------------------------------------------------------
+   READ FLUTTER VERSION FROM local.properties (AFTER plugins)
+   ----------------------------------------------------------- */
+def localProperties = new Properties()
+def localPropertiesFile = rootProject.file('local.properties')
+if (localPropertiesFile.exists()) {
+    localPropertiesFile.withInputStream { stream ->
+        localProperties.load(stream)
+    }
+}
+
+def flutterVersionCode = localProperties.getProperty('flutter.versionCode') ?: '1'
+def flutterVersionName = localProperties.getProperty('flutter.versionName') ?: '1.0.0'
+
 android {
-    namespace = "com.bizmate.app"
-    compileSdk = 36
-    ndkVersion = "27.0.12077973"
+    namespace "com.bizmate.app"
+    compileSdk 36
+    ndkVersion "27.0.12077973"
 
     compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_17
-        targetCompatibility = JavaVersion.VERSION_17
-        coreLibraryDesugaringEnabled = true // ✅ Correct property name
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+        coreLibraryDesugaringEnabled true
     }
 
-
     kotlinOptions {
-        jvmTarget = "17"
+        jvmTarget = '17'
     }
 
     defaultConfig {
-        applicationId = "com.bizmate.app"
-        minSdkVersion(24) // ✅ Use proper Kotlin syntax here
-        targetSdk = 33
-        versionCode = 1
-        versionName = "1.0.0"
+        applicationId "com.bizmate.app"
+        minSdk 24
+        targetSdk 33
+        versionCode flutterVersionCode.toInteger()
+        versionName flutterVersionName
     }
-
 
     buildTypes {
         release {
-            signingConfig = signingConfigs.getByName("debug")
+            signingConfig signingConfigs.debug
         }
     }
 }
 
 flutter {
-    source = "../.."
+    source '../..'
 }
 
 dependencies {
-    coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:2.1.4")
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.4'
 }
