--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -54,5 +54,7 @@ flutter {
 }
 
 dependencies {
+    implementation 'androidx.appcompat:appcompat:1.4.0'
+
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.4'
 }
