--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.13+32
+version: 1.0.14+34
 
 environment:
   sdk: ^3.7.2
@@ -77,6 +77,7 @@ dependencies:
   iconsax: ^0.0.8
   lottie: ^3.3.2
   flutter_native_splash: ^2.4.7
+  package_info_plus: ^4.2.0
 
 flutter_launcher_icons:
   android: true
